# tclcurl-ng

./: .gitignore  ChangeLog  Changes.txt  Makefile.in  README.md  configure  configure.ac  pkgIndex.tcl.in  share-debug-notes.txt
doc/: tclcurl.html  tclcurl.n  tclcurl.n.in  tclcurl.n.md  tclcurl.n.md.in  tclcurl_multi.html  tclcurl_multi.n  tclcurl_multi.n.md  tclcurl_multi.n.md.in  tclcurl_share.html  tclcurl_share.n  tclcurl_share.n.in  tclcurl_share.n.md  tclcurl_share.n.md.in
examples/: README.md  http_get.tcl  http_urlencoded.tcl
generic/: curl_getinfo.c  curl_mime.c  curl_mime.h  curl_setopts.c  curl_setopts.h  curl_utils.c  ftp.c  multi.c  multi.h  protocol_mask.c  tcl_size.c  tclcompat.h  tclcurl.c  tclcurl.h
tests/: TESTING.md  all.tcl  auth.test  config.test  cookies.test  debug.test  escape.test  ftp.test  ftp_server.tcl  getinfo.test  http.test  http200Aliases.tcl  httpBufferPost.tcl  http_common.tcl  http_server.tcl  https.test  https_server.tcl  mime.test  negotiation.test  output.test  progress.test  proxy.test  proxy_server.tcl  redir.test  repro_share.tcl  request_headers.test  support.tcl  tcl_conf.tcl.in  tclcurl_test_server.tcl  tclwire.toml  testserver.tcl  version.test  versionInfo.test  version_info.test
tests/legacy/: bufferSize.tcl  httpPost.tcl  postdebug.tcl
testservers/: APPLICATION_ARCHITECTURE.md  REQUEST_BODY_HANDLING.md  WORKER_REQUEST_API.md  ftp_server.tcl  http_application.tcl  http_endpoint.tcl  http_server.tcl  http_test_application.tcl  https_server.tcl  index.html  inspect_threads_db.tcl  logger.tcl  pkgIndex.tcl  proxy_server.tcl  testserver.tcl  thread_base.tcl  thread_master.tcl  threads.tcl  threads_shared_db.tcl
